--- a/backend-phonebook/package.json
+++ b/backend-phonebook/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.0",
+    "@stylistic/eslint-plugin-js": "^2.2.2",
+    "eslint": "^8.5.0",
     "nodemon": "^3.0.3"
   }
 }
